[package]
name = "energy_trade_matching"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "."
]

[dependencies]
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"

[dev-dependencies]
criterion = { version = "0.5.1" }
rand = "0.8.5"
chrono = "0.4.24"

[[bench]]
name = "trade_matching_algorithm"
harness = false